added styles =all components

--- a/src/index.css
+++ b/src/index.css
@@ -13,3 +13,11 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+
+h1,
+h2 {
+  font-size: 25px;
+  padding: 10px;
+  margin: 33px;
+  color: rgb(54, 39, 39);
+}
